# cursor_project_setting

./: .cursorignore  .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: core-standards.mdc  python-standards.mdc
docs/: 설정_가이드.md
src/your_package/: __init__.py
